# merry-go-round

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  deps.bzl  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
url_shortener/: BUILD.bazel  main.go
url_shortener/config/: BUILD.bazel  db.go
url_shortener/data/: BUILD.bazel  models.go
urlshort/: BUILD.bazel
