###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
bazel_dep(name = "gazelle", version = "0.37.0")

# --------------------------------------------------------------------------

bazel_dep(name = "rules_go", version = "0.48.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_joho_godotenv", "io_gorm_driver_postgres", "io_gorm_gorm")

# --------------------------------------------------------------------------

bazel_dep(name = "rules_oci", version = "1.8.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine_linux_amd64",
    image = "index.docker.io/library/alpine",
    platforms = ["linux/amd64"],
    tag = "latest",
)
oci.pull(
  name = "distroless_base",
  tag = "latest",
  image = "gcr.io/distroless/base",
  platforms = ["linux/amd64"],
)

use_repo(oci, "alpine_linux_amd64")
use_repo(oci, "distroless_base")

# --------------------------------------------------------------------------

bazel_dep(name = "rules_pkg", version = "1.0.1")
