load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/colematthew4/merry-go-round/url_shortener",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "url_shortener",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "package",
    srcs = [":lib"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/url_shortener"],
    tars = [":package"],
)
